small fix: winscreen  padding and text alignment

--- a/src/index.css
+++ b/src/index.css
@@ -193,6 +193,7 @@ body,
 /* WIN SCREEN */
 .win-container {
   background-color: #333;
+  padding: 12px 0 12px 0;
   width: 286px;
   height: 286px;
   position: absolute;
